# memcord

./: .clawhubignore  .gitignore  .mcp.json.example  .releaseexclude  CLAUDE.md  OPTIMIZE_PLAN.md  PUBLISH.md  README.md  SKILL.md  TEST_MEMCORD_ZERO.md  TODO.md  claude_desktop_config.json  install.ps1  install.sh  package.json  pyproject.toml
.antigravity/: mcp_config.json
.claude/: settings.local.json
.claude/commands/: memcord-clear.md  memcord-close.md  memcord-import.md  memcord-init.md  memcord-list.md  memcord-merge.md  memcord-name.md  memcord-query.md  memcord-read.md  memcord-save-progress.md  memcord-save.md  memcord-search.md  memcord-select-entry.md  memcord-tag.md  memcord-unbind.md  memcord-use.md  memcord-zero.md
.github/workflows/: ci.yml  release-sync.yml  release_to_prod  shared.yml
config-templates/: README.md
config-templates/antigravity/: mcp_config.json
config-templates/claude-code/: hooks.json  mcp.json  mcp.windows.json
config-templates/claude-desktop/: config.json  config.windows.json
config-templates/vscode/: mcp.json
docs/: DATA_PROTECTION_GUIDE.md  claude-code-guide.md  data-format.md  data-protection-guide.md  enterprise-setup.md  examples.md  features-guide.md  import-and-merge.md  installation.md  interactive-help-system.md  search-and-query.md  security-vscode.md  testing-guide.md  tools-reference.md  troubleshooting.md  versions.md  vscode-setup.md
docs/enhanced-tool-docs/core-tools/: memcord_name.md  memcord_save.md
docs/enhanced-tool-docs/search-tools/: memcord_search.md
docs/examples/: vscode-copilot-workflows.md
docs/troubleshooting-guides/: common-issues.md
docs/usage-examples/: getting-started-workflows.md
scripts/: gen_social_preview.py  generate-config.py  publish-to-main.ps1  publish-to-main.sh
src/memcord/: __init__.py  archival.py  batch_operations.py  cache.py  compression.py  constants.py  errors.py  feedback_messages.py  handler_registry.py  importer.py  llm_summarizer.py  logging_config.py  mcp_progress.py  memory_manager.py  merger.py  models.py  notifications.py  optimized_schemas.py  optimized_server.py  progress_integration.py  progress_tracker.py  prompts.py  query.py  response_builder.py  response_optimizer.py  search.py  security.py  server.py  smart_defaults.py  status_monitoring.py  storage.py  storage_efficiency.py  summarizer.py  summarizer_base.py  summarizer_factory.py  temporal_parser.py  workflow_templates.py
src/memcord/services/: __init__.py  archive_service.py  compression_service.py  import_service.py  merge_service.py  monitoring_service.py  select_entry_service.py
tests/: __init__.py  conftest.py  test_archive_service.py  test_auto_consolidation.py  test_auto_save.py  test_binding_states.py  test_cache.py  test_cache_invalidation.py  test_compression_service.py  test_configure_tool.py  test_critical_fixes.py  test_custom_storage_path.py  test_e2e_workflows.py  test_generate_config.py  test_handler_registry.py  test_import_service.py  test_install_scripts.py  test_mcp_protocol_compliance.py  test_merge_service.py  test_metrics_collector.py  test_models_contracts.py  test_monitoring_service.py  test_operation_logger.py  test_optimized_server.py  test_project_binding.py  test_resource_monitor.py  test_response_builder.py  test_search_index_staleness.py  test_server_mcp_interface.py  test_status_monitoring.py  test_storage_contracts.py  test_storage_links.py  test_storage_operations.py  test_storage_path_bug.py  test_summarizer.py  test_summarizer_backends.py  test_summarizer_pre_post.py  test_summarizer_regression.py  test_vscode_integration.py
utilities/: protect_data.py  verify_vscode_setup.py
