[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memcord"
version = "0.1.0"
description = "MCP server for chat memory management with summarization and file sharing"
authors = [
    {name = "MemCord", email = "memcord@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.3.0",
    "nltk>=3.8",
    "aiofiles>=23.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pdfplumber>=0.10.0",
    "pandas>=2.0.0",
    "trafilatura>=1.8.0",
    "python-magic>=0.4.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
memcord = "memcord.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/memcord"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "pyproject.toml",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
